--- a/rest/security/pom.xml
+++ b/rest/security/pom.xml
@@ -21,18 +21,20 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-		</dependency>
-
+		
 	</dependencies>
 
+	<packaging>war</packaging>
+	<build>
+	<finalName>SpringDataRestSecurity</finalName>
+	</build>
 </project>
